# vdapseisutils

./: .gitignore  .gitignorefile  CHANGELOG.md  DataSource Tutorial.ipynb  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  xmlutils.py
ccmatrix/: __init__.py  families.py  plot.py
data/: MtHood_inventory.xml  Stratovolcano_1DmeanLayer_JDP.csv  Stratovolcano_1DmeanLayer_JDP.tvel  SwarmLatLon.config  catalog_hood_msas.xml  catalog_kiholo_bay_msas.xml  catalog_kilauea_eruption.xml  catalog_msh1980_eruption.xml  example.xml  get_msh_test_data.py  hood_fdsnws-event_2021-10-21T21_11_39Z.txt  hood_nll.sum.grid0.loc.csv  hood_nll.sum.grid0.loc.hyp  hood_nll.sum.grid0.loc.swarm.csv  msh_inventory.xml
docs/: maps_volcano_api_v1.md  obspy_ext_subtasks.md
eventutils/: __init__.py  catalogutils.py
ewutils/: ewutils.py
examples/: DataSource-Download_and_Plot-Pavlof_Explosions.ipynb  DataSource-download_archive_read.py  MtHood_EQmap.py  Waveform Plotting - Pavlof explosions.ipynb  cross_section_standalone.py  date_concise_formatter.ipynb  hillshade_demo.py  hillshade_volcano_examples.py  map_minimal.py  swarm_clipboard_minimal.py  test.py  volcano_figure_layout.py  waveform_plotting.py  waveform_plotting_pavlof_explosion.py
gallery/: Helicorder_Gareloi_earthquakes.py  Helicorder_Goma_earthquakes.py  Helicorder_tutorial.ipynb  Inventory-Misc_conversions.py  Map_tutorial.ipynb  Mapping_tutorial.ipynb  Mapping_tutorial.py  Misc_Inventory_Conversions.py  NonLinLoc_Control_Tutorial.py  Plot_Map_of_Volcanic_Earthquakes.py  README.md  SwarmMPL_Clipboard_1-Basics.ipynb  SwarmMPL_Clipboard_2-Annotations.ipynb  SwarmMPL_Clipboard_3-Infrasound_Travel_Time.ipynb  SwarmMPL_Clipboard_A.py  SwarmMPL_Clipboard_B.py  SwarmMPL_Clipboard_C.py  Time_tutorial.py  Velocity_Models_read_and_plot.py  VolcanoMap_Hood_earthquakes.py  goma_waveform.mseed
maputils/: CrossSection.py  HeatMap-Agung.ipynb  HeatMap-MtHood.ipynb  MapFigure.py  MapFigure2.py  MapFigure_v2.py  MountainCrossSection.ipynb  XSprofile.ipynb  basicmap_dep.py  cartopy_3d.py  elevation.csv  heatmap.csv  inventoryutils.py  (+7 more)
(+500 files in other folders)
