[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdapseisutils"
version = "0.1.0"
description = "Advanced utilities for volcano seismology"
authors = [{name = "Jay Wellik", email = "jwellik@usgs.gov"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jwellik/vdapseisutils"

[tool.setuptools.packages.find]
where = ["."]
include = ["vdapseisutils*"]
exclude = ["tests*"]
