[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdapseisutils"
version = "0.2.0"
description = "Advanced utilities for volcano seismology"
authors = [{name = "Jay Wellik", email = "jwellik@usgs.gov"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "obspy",
    "pandas",
    "bokeh",
    "cartopy",
    "timezonefinder",
    "unidecode",
    "geopy",
    "nllgrid",
]

[project.optional-dependencies]
# PyTables (tables) needs a system HDF5 install. On macOS: brew install hdf5, then set HDF5_DIR.
# Only install this extra if you need HDF5/PyTables support.
tables = ["tables"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/jwellik/vdapseisutils"

[tool.setuptools.packages.find]
where = ["."]
include = ["vdapseisutils*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." helps editable installs; ``tests/conftest.py`` also forces the repo root and purges
# a mistaken ``vdapseisutils`` import when a parent directory shadows the real package.
pythonpath = ["."]
